Added Chapter 12: Semantic HTML

--- a/semantic-html/article.html
+++ b/semantic-html/article.html
@@ -51,56 +51,60 @@
           <footer>
             <p>This fake article was written by somebody at InternetingIsHard.com, which
               is a pretty decent place to learn how to become a web developer.</p>
-            </footer>
+              <address>
+                Please contact <a href='mailto:troymcclure@example.com'>Troy
+                  McClure</a> for questions about this article.
+                </address>
+              </footer>
 
-          </article>
+            </article>
 
-          <aside class='sidebar'>
-            <h2>Sidebar</h2>
-            <p>Some sidebar content</p>
-            <nav>
-              <h3>HTML &amp; CSS Tutorial</h3>
-              <ul>
-                <li><a href='#'>Introduction</a></li>
-                <li><a href='#'>Basic Web Pages</a></li>
-                <li><a href='#'>etc...</a></li>
-              </ul>
-            </nav>
-            <nav>
-              <h3>JavaScript Tutorial</h3>
-              <ul>
-                <li><a href='#'>Introduction</a></li>
-                <li><a href='#'>Hello, JavaScript</a></li>
-                <li><a href='#'>etc...</a></li>
-              </ul>
-            </nav>
-          </aside>
-
-
-          <section>     <!-- Add this -->
-            <h2>The Document Outline</h2>
-            <p>HTML5 includes several “sectioning content” elements that
-              affect the document outline.</p>
-
-              <h3>Headers</h3>
-              <p>The <code>&lt;header&gt;</code> element is one such sectioning
-                element.</p>
-
-                <h3>Footers</h3>
-                <p>And so is the <code>&lt;footer&gt;</code> element.</p>
-              </section>    <!-- And this -->
-
-              <section>     <!-- This too! -->
-                <h2>Inline Semantic HTML</h2>
-                <p>The <code>&lt;time&gt;</code> element is semantic, but it’s not
-                  sectioning content.</p>
-                </section>    <!-- Don't forget this -->
-
-                <footer>
-                  <p>&copy; 2017 InternetingIsHard.com</p>
-                </footer>
+            <aside class='sidebar'>
+              <h2>Sidebar</h2>
+              <p>Some sidebar content</p>
+              <nav>
+                <h3>HTML &amp; CSS Tutorial</h3>
+                <ul>
+                  <li><a href='#'>Introduction</a></li>
+                  <li><a href='#'>Basic Web Pages</a></li>
+                  <li><a href='#'>etc...</a></li>
+                </ul>
+              </nav>
+              <nav>
+                <h3>JavaScript Tutorial</h3>
+                <ul>
+                  <li><a href='#'>Introduction</a></li>
+                  <li><a href='#'>Hello, JavaScript</a></li>
+                  <li><a href='#'>etc...</a></li>
+                </ul>
+              </nav>
+            </aside>
 
 
+            <section>     <!-- Add this -->
+              <h2>The Document Outline</h2>
+              <p>HTML5 includes several “sectioning content” elements that
+                affect the document outline.</p>
 
-              </body>
-              </html>
+                <h3>Headers</h3>
+                <p>The <code>&lt;header&gt;</code> element is one such sectioning
+                  element.</p>
+
+                  <h3>Footers</h3>
+                  <p>And so is the <code>&lt;footer&gt;</code> element.</p>
+                </section>    <!-- And this -->
+
+                <section>     <!-- This too! -->
+                  <h2>Inline Semantic HTML</h2>
+                  <p>The <code>&lt;time&gt;</code> element is semantic, but it’s not
+                    sectioning content.</p>
+                  </section>    <!-- Don't forget this -->
+
+                  <footer>
+                    <p>&copy; 2017 InternetingIsHard.com</p>
+                  </footer>
+
+
+
+                </body>
+                </html>
